--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
   },
   "bundleDependencies": false,
   "dependencies": {
+    "axe-webdriverjs": "^2.0.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "chromedriver": "^2.37.0",
+    "colorlog": "^0.1.1",
     "commander": "^2.9.0",
     "cucumber": "^1.3.3",
+    "cucumber-assert": "^2.0.1",
     "cucumber-html-reporter": "^2.0.3",
     "cucumber-junit": "^1.6.0",
     "electron": "^1.8.4",
@@ -64,11 +67,12 @@
     "merge": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.12",
     "require-dir": "^0.3.2",
-    "selenium-webdriver": "^3.0.0"
+    "selenium-webdriver": "^3.6.0"
   },
   "deprecated": false,
   "description": "JavaScript browser automation framework using official selenium-webdriver and cucumber-js",
   "devDependencies": {
+    "axe-core": "^3.0.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.2.0",
